Fin d'implémentation de l'historique
